--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="offers.css">
     <link rel="stylesheet" href="signin.css">
     <link rel="stylesheet" href="help.css">
+    <link rel="shortcut icon" href="Swiggy image.png" type="image/x-icon">
 </head>
 <body>
     <header class="header">
